Revision history for {{$dist->name}}

{{$NEXT}}

0.0701    2014-02-10 19:16:56 -0500
  - handle 64bit integers on older versions of libarchive (eg. 2.5.x)
    (was intended for 0.07, but missed the release)

0.07      2014-02-10 18:51:41 -0500
  - preliminary support for libarchive 2.5.x
  - fix for MSWin32 build failure
  - improved test suite

0.06      2014-02-05 15:11:38 -0500
  - correctly escape @_ in callback generation (thanks chorny GH#34)
  - fewer bogus warnings on MSWin32
  - build/test fixes for netbsd / openbsd
  - support older libarchives that don't have archive_read/write_free
    (use archive_read/write_finish instead)

0.05      2014-02-03 21:09:11 -0500
  - include fix to MSVC++ that got missed in previous release

0.04      2014-02-03 21:07:31 -0500
  - firsty CPAN release