@@ -98,13 +98,16 @@ L<archive_read_open2|Archive::Libarchive::XS::Function#archive_read_open2>.
  my $mywrite = sub {
    my($archive, $data, $buffer) = @_;
    ...
-   return $status1;
+   return $bytes_written_or_status;
  };
  my $status2 = archive_write_open($archive, undef, $mywrite, undef);
 
 This callback is called whenever libarchive has data it wants to send
 to output.  The callback itself takes one additional argument, a 
 buffer containing the data to write.
+
+It should return the actual number of bytes written by you, or an
+status value for an error.
 
 =head2 skip
 
