@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Documentation correction, return value for write callback
+    (Archive::Libarchive::XS::Callback)
+  - minor test diagnostic improvement
 
 0.0701    2014-02-10 19:16:56 -0500
   - handle 64bit integers on older versions of libarchive (eg. 2.5.x)
